Fixed spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,15 +13,17 @@ a {
 	margin-left: 0px;
 	margin-right: 0px;
 	background-color: #304770;
-	transform: skewY(-1.5deg);
+	transform: skewY(-4deg);
 	transform-origin: 100%;
 	z-index: 0;
 	width: 100%;
 	left: 0;
 	right: 0;
 	min-height: 600px;
-	padding-bottom: 20px;
+	padding-bottom: 5em;
 	padding-top: 20px;
+	padding-left: 1em;
+	padding-right: 1em;
 }
 
 .Inner {
@@ -32,10 +34,11 @@ a {
 	width:100%
 	left: 0;
 	right: 0;
-	transform: skewY(1.5deg);
+	transform: skewY(4deg);
 	transform-origin: 100%;
 	position: relative;
 	top: 5em;
+	bottom: 5em;
 
 }
 /*
